Try to fix Side banners are still visible in mobile browsers GH-237

--- a/R7.Epsilon/Skins/css/_skin.scss
+++ b/R7.Epsilon/Skins/css/_skin.scss
@@ -227,12 +227,19 @@ a.btn-primary:visited {
 
 .skin-sidebanner-panes {
     position: relative;
+    display: none;
+}
+
+// 1140 (BS4 xl max. container width) - 15*2 (BS4 container x-padding) + 200*2 = 1510 */
+@media only screen and (min-width: 1510px) {
+	.skin-sidebanner-panes {
+		display: block;
+	}
 }
 
 .skin-sidebanner-pane-box {
     width: 200px;
     z-index: 5;
-    display: none;
     position: absolute;
 }
 
@@ -242,13 +249,6 @@ a.btn-primary:visited {
 
 .skin-sidebanner-pane-box.skin-sidebanner-pane-box-right {
     right: 0;
-}
-
-// 1140 (BS4 xl max. container width) - 15*2 (BS4 container x-padding) + 200*2 = 1510 */
-@media only screen and (min-width: 1510px) {
-	.skin-sidebanner-pane-box {
-		display: block;
-	}
 }
 
 // style it like the breadbrumb
